# DSA

./: CMakeLists.txt  main.cpp  push.sh  readme.md
.ccls-cache/@@home@runner@DSA/: @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@algorithm.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@array.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@atomic.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@backward@auto_ptr.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@backward@binders.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bit.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@algorithmfwd.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@align.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@alloc_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@allocated_ptr.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@allocator.h.blob  (+375 more)
.ccls-cache/@home@runner@DSA/: algorithm@backtracking.h.blob  (+3 more)
algorithm/: backtracking.cpp  backtracking.hpp
apply/: cubeLand.cpp  cubeland.cpp
common/: common.h
exercise/: internetprice.cpp  triangle.cpp
ipc/: CMakeLists.txt  reader.cpp  share_mem_reader.cpp  share_mem_writer.cpp  shminterface.hpp  writer.cpp
problems/: maxScoreWords.cpp
read/: CMakeLists.txt
(+16 files in other folders)
